--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ kapt {
     correctErrorTypes true
 }
 dependencies {
-
+    runtimeOnly 'com.google.accompanist:accompanist-flowlayout:0.30.1'
 
     //hilt dependencies
     implementation "com.google.dagger:hilt-android:2.44"
